tests/ui/feature-gates/feature-gate-closure_track_caller.stderr
error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:6:20
   |
LL |     let _closure = #[track_caller] || {};
   |                    ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/crablang/crablang/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:7:22
   |
LL |     let _generator = #[track_caller] || { yield; };
   |                      ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/crablang/crablang/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:8:19
   |
LL |     let _future = #[track_caller] async {};
   |                   ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/crablang/crablang/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `crablangc --explain E0658`.
